<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="image_resource">
        <item>@drawable/ic_info</item>
        <item>@drawable/ic_info1</item>
    </array>
    <string name="btn_info">تخطي</string>

    //fragment login
    <string name="edit_login">الجوال</string>
    <string name="edit2_login">كلمة المرور</string>
    <string name="edit_reset">هل نسيت كلمة المرور</string>
    <string name="enter">دخول</string>
    <string name="creat">انشاء حساب جديد</string>
    <string name="remember">تذكرني</string>

    <string name="forget_pass">نسيت كلمة المرور</string>
    <string name="tele_number">رقم الجوال</string>
    <string name="send">ارسال</string>

    //fragment chang password
    <string name="code_change">كود تغيير كلمة المرور</string>
    <string name="code_verify">كود التحقق</string>
    <string name="new_pass">كلمة المرور الجديدة</string>
    <string name="confirm_pass">تاكيد كلمة المرور الجديده</string>
    <string name="change_pass">تغيير كلمة المرور</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">اعدادات الاشعارات</string>
    <string name="toolbar_title">المفضلة</string>

    //createaccount fragment
    <string name="creataccount_name">الاسم</string>
    <string name="creataccount_birth">تاريخ الميلاد</string>
    <string name="creataccount_post">البريد الالكتروني</string>
    <string name="creataccount_bloodtype">فصيلة الدم</string>
    <string name="creataccount_lastdonation">اخر تاريخ للتبرع</string>
    <string name="creataccount_phonenum">رقم الهاتف</string>
    <string name="creataccount_password">كلمة المرور</string>
    <string name="creataccount_confirmpassword">تاكيد كلمة المرور</string>
    <string name="creataccount_btnregister">تسجيل</string>

    // aboutapp fragment
    <string name="abotapp_text">تش أنّك مرهقٌ جداً يا فتى؟ متعبٌ من كلّ شيءٍ، وساخطٌ على كلّ شيءْ، تبدُو لِي كذلك، وعيناكَ الضيّقتانِ، تزيدانِ من حدّتكْ، كلّما اكتملتْ تلكَ العقدةُ الّتي تعلُو وجهكْ.عرُ

اهدأ، فأنا أستطيعُ أنْ أتفهّم غضبكْ ونقمتكَ على الحياةِ كلّها، وأنتَ تجلسُ كلّ صّباحٍ في هذهِ الزاويةِ المعتمةِ منْ هذا الكوكبِ المقفرِ، تنتظرُ منْ يمرُّ من هُنا راغباً في مسحِ حذائهِ.

تشعرُ بالخجلْ أليسَ كذلك؟ أو ربّما تشعرُ أنّك مطحونٌ في ركنٍ منسيٍ من هذا الكونْ، تشعرُ بالرّغبةِ في البكاءْ، كلّما ناولكَ أحدهمْ نظيرَ عملكْ، أنا أفهمكْ حقاً، لكنّي أفهمُ أيضاً أنّنا لا نختارُ ما نحنُ عليهْ، بينما نستطيعُ تغييرهُ بأيدينا مسْتقبلاً، أنتَ تبْنِي نفسكْ، فلا تسْتهنْ بكلّ الّذي تقُومْ به الآن.

غداً حينَ ستكبرْ، ستدركُ أنّك قدْ صقلتَ الرّجولة فيكَ مبكراً جداً، وأنّ الطّفولةَ الّتي حُرمتَ جنّتها، ستعوّضُ برجولةٍ مكتملةٍ وقادرةٍ على مواجهةِ صُعوباتِ الحياة، أنتَ تصنعُ من نفسكَ الآن رجلاً، وقليلُون جداً همُ الرجالُ على هذا الكوكبْ.

يا صّغيرِي، لا تخجلْ منْ نفسكْ أبداً، فأنتَ الآن درسٌ للعالمِ كلّه.

أنتَ درسٌ للعالمِ أجمعْ.

بطلْ

عادَ لتوّهِ من الجّبهة، يبدُو تعباً مرهقاً بعض الّشيءْ، هزيلاً فقد كانَ قبلَ سفرهِ مكتملاً، شيءٌ منْ زرقةِ عينيهِ مالَ إلى السّوادْ، وشعرهُ الأشقر الجميلْ لمْ يعدْ تماماً كذلك، غابتْ ضحكتهُ الجميلةُ الآسرة، وحضرتْ مكانها ابتسامةٌ خافتةٌ على شفيرِ الحزنْ، سألهُ ابنُ أخيهِ الطّفلُ ذو السابعة، عمّي: يقُولُ أبّي إنّك بطلٌ، وأنا أخبرتُ عنكَ كلّ أصدِقائِي، وجعلتُ الجميعَ يرى صورتكَ بالبزّة العسكرية، نحنُ فخُورونَ بكْ، وأنا أريدُ أنْ أصبحَ مثلك حين أكبرْ
    </string>


    //articl content
    <string name="articlecontent_text">طريقة الوقاية من الامراض</string>

    //donation layout
    <string name="donationlayout_stat">اسم الحالة</string>
    <string name="donationlayout_hospital">مستشفي</string>
    <string name="donationlayout_city">المدينة</string>
    <string name="donationlayout_statname">احمد محمد </string>
    <string name="donationlayout_hospitalname">القصر العيني</string>
    <string name="donationlayout_cityname">المنصورة</string>
    <string name="donationlayout_details">التفاصيل</string>
    <string name="donationlayout_calling">اتصال</string>


    //modify fragment
    <string name="modify_date">21/3/1993</string>
    <string name="modify_text">ab+</string>
    <string name="modify_btn">تعديل</string>

    //notification fragment
    <string name="notification_text">
        تش أنّك مرهقٌ جداً يا فتى؟ متعبٌ من كلّ شيءٍ، وساخطٌ على كلّ شيءْ، تبدُو لِي كذلك، وعيناكَ الضيّقتانِ، تزيدانِ من حدّتكْ، كلّما اكتملتْ تلكَ العقدةُ الّتي تعلُو وجهكْ.عرُ



    </string>
    <string name="notification_govern">المحافظات</string>

    <string name="notification_blood">فصائل الدم</string>
    <string name="notification_btnsave">حفظ</string>


    //contactus fragment
    <string name="contactus_phone">0102016484</string>
    <string name="contactus_post">ss@gmail.com</string>
    <string name="contactus_btn">تواصل معنا</string>
    <string name="contactus_messagetitle">عنوان الرسالة</string>
    <string name="contactus_messagetext">نص الرسالة </string>

    //fragment donation request
    <string name="donatrequest_age">العمر</string>
    <string name="donatrequest_count">عدد الاكياس</string>
    <string name="donatrequest_address">عنوان المستشفي</string>
    <string name="donatrequest_hospitalname">اسم المستشفي</string>
    <array name="donatrequest_bloodtype">
        <item>فصيلة الدم</item>
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O-</item>
    </array>
    <string name="donatrequest_notes">ملاحظات</string>
    <string name="donatrequest_btnsend">ارسال الطلب</string>


    <string name="action_settings">Settings</string>
    <array name="govern_array">
        <item>المحافظة</item>
    </array>
    <array name="city_array">
        <item>االمدينة</item>
    </array>
    <array name="article_arrray">
        <item>الوقاية</item>
    </array>
    <array name="donate_array">
        <item>اختر فصيلة الدم</item>
    </array>
    <array name="donate2_array">
        <item>اختر المدينة</item>
    </array>
    <string name="title_activity_maps">Map</string>
    <string name="map_selectlocation">اختيار الموقع</string>
    
    //donation details fragment
    <string name="donationdetails_bagsnumber">عدد الاكياس المطلوبة</string>
    <string name="donationdetails_bloodtype">فصيلة الدم</string>
    <string name="donationdetails_hospital"> المستشفي</string>
    <string name="donationdetails_details"> التفاصيل</string>
    <string name="donationdetails_phonenumber"> رقم الجوال</string>



</resources>
