<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/donation_bloodtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_m"
        android:hint="B+"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginEnd="@dimen/dimens_m"
        android:padding="@dimen/dimens_s"
        android:textSize="@dimen/dimens_xxxl"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_s"
        android:layout_marginStart="@dimen/dimens_s"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/donationlayout_stat"
            android:textSize="@dimen/dimens_xl"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/donationlayout_hospital"
            android:textSize="@dimen/dimens_xl"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/donationlayout_city"
            android:textSize="@dimen/dimens_xl"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_s"
        android:layout_marginEnd="@dimen/dimens_s"
        android:orientation="vertical">

        <TextView
            android:id="@+id/donation_patientname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/donationlayout_statname"
            android:textSize="@dimen/dimens_xl"/>
        <TextView
            android:id="@+id/donation_hospital_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/donationlayout_hospitalname"
            android:textSize="@dimen/dimens_xl"/>
        <TextView
            android:id="@+id/donation_cityname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/donationlayout_cityname"
            android:textSize="@dimen/dimens_xl"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_s"
        android:layout_marginStart="@dimen/dimens_s"
        android:layout_marginEnd="@dimen/dimens_s"
        android:orientation="vertical">
        <Button
            android:id="@+id/donationlayout_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/donationlayout_details"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/donationlayout_calling"
            android:layout_marginTop="@dimen/dimens_s"
            android:background="@color/green"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_call_black_24dp"

            android:drawableTint="@color/white"/>

    </LinearLayout>

</LinearLayout>