<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sayed.myapplication.Ui.Fragments.DonationDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/donationdetails_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creataccount_name"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />

    <EditText
        android:id="@+id/donationdetails_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donatrequest_age"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/donationdetails_bloodtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donationdetails_bloodtype"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/donationdetails_bagsnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donationdetails_bagsnumber"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/donationdetails_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donationdetails_hospital"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/donationdetails_hospitaladdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donatrequest_address"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/donationrequest_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donationdetails_phonenumber"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/donationdetails_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/donationlayout_details"
        android:layout_marginTop="@dimen/dimens_m"
        android:layout_marginBottom="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:paddingBottom="@dimen/dimens_xxxl"
        android:paddingTop="@dimen/dimens_sss"
        android:paddingEnd="@dimen/dimens_m"
        android:paddingRight="@dimen/dimens_m" />

   <com.google.android.gms.maps.MapView
       android:layout_width="match_parent"
       android:layout_height="@dimen/size"
       android:layout_marginBottom="@dimen/dimens_m"
       android:layout_marginStart="@dimen/dimens_l"
       android:layout_marginEnd="@dimen/dimens_l"
       android:id="@+id/google_mapview"/>


</android.support.v7.widget.LinearLayoutCompat>
