<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_splash"
    tools:context="com.example.sayed.myapplication.Ui.Fragments.LoginFragment">

   <ImageView
       android:layout_width="200dp"
       android:layout_height="200dp"
       android:src="@drawable/ic_logo"
       android:scaleType="fitXY"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="@dimen/txt_size_l"
       />
    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_login"
        android:layout_marginTop="@dimen/dimens_xxl"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:layout_marginTop="@dimen/dimens_m"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"
        android:hint="@string/edit2_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_l"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/login_password_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_warning_black_24dp"
            android:gravity="start"
            android:drawableTint="@color/yellow"
            android:text="@string/edit_reset"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:buttonTint="@color/albumColorPrimary"
            android:layoutDirection="rtl"
            android:checked="true"
            android:layout_weight="0.5" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimens_l">

        <Button
            android:id="@+id/login_btnenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimens_m"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_l"
            android:background="@drawable/background_green"
            android:text="@string/enter"/>
        <Button
            android:id="@+id/login_btncreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creat"
            android:textSize="@dimen/txt_size_l"
            android:gravity="center"
            android:background="@drawable/background_blue"
            android:layout_marginTop="@dimen/txt_size_l"
            android:textColor="@color/white"
            android:padding="@dimen/dimens_m"/>

    </LinearLayout>



</LinearLayout>
