<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.sayed.myapplication.Ui.Fragments.NotificationSettingFragment">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_m"
        android:background="@drawable/background"
        android:textSize="@dimen/txt_size_l"
        android:text="@string/notification_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:text="@string/notification_blood"
            android:textSize="@dimen/txt_size_l"
            android:padding="@dimen/dimens_m"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dimens_m"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:text="@string/notification_govern"
            android:padding="@dimen/dimens_m"
            android:textSize="@dimen/txt_size_l"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueblack"
        android:textColor="@color/white"
        android:text="@string/notification_btnsave"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginTop="@dimen/dimens_xxxxl"/>


</LinearLayout>
