<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_splash"
    tools:context="com.example.sayed.myapplication.Ui.Fragments.ResetFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_logo"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_xxl"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/txt_size_l"
        android:text="@string/forget_pass"
        android:layout_marginTop="@dimen/dimens_xxl"/>


    <EditText
        android:id="@+id/reset_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tele_number"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginTop="@dimen/dimens_xxl"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background"
        android:padding="@dimen/dimens_m"/>
    <Button
        android:id="@+id/reset_btnsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="@dimen/txt_size_l"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimens_xxl"
        android:layout_marginStart="@dimen/dimens_l"
        android:layout_marginEnd="@dimen/dimens_l"
        android:background="@drawable/background_green"
        android:textColor="@color/white"
        android:padding="@dimen/dimens_m"/>


</LinearLayout>
